--- a/package.json
+++ b/package.json
@@ -34,7 +34,13 @@
     "css-loader": "^3.0.0",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
+    "eslint-utils": ">=1.4.1",
     "file-loader": "^4.0.0",
+    "lodash": ">=4.17.13",
+    "fstream": ">=1.0.12",
+    "tar": ">=2.2.2",
+    "set-value": ">=2.0.1",
+    "mixin-deep": ">=1.3.2",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
